<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="mob.dau.ordercpu.model.CpuViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AmountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <RadioGroup
                android:id="@+id/amount_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/option_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.quantity.equals(1)}"
                    android:onClick="@{() -> viewModel.setQuantity(1)}"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text="@string/one_label"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginStart="30dp"
                    android:checked="@{viewModel.quantity.equals(2)}"
                    android:onClick="@{() -> viewModel.setQuantity(2)}"
                    android:text="@string/two_label" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginStart="30dp"
                    android:checked="@{viewModel.quantity.equals(3)}"
                    android:onClick="@{() -> viewModel.setQuantity(3)}"
                    android:text="@string/three_label" />
            </RadioGroup>

            <TextView
                android:id="@+id/or_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amount_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/or_label"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceHeadline4" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/or_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:helperText="*More than 9 is not allowed"
                app:helperTextTextColor="@color/red"
                android:hint="@string/amount_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:maxLength="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                style="@style/Widget.OrderCPU.ElevatedButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/next_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:backgroundTint="@color/white"
                android:minWidth="300dp"
                app:strokeColor="@color/dark_gray"
                app:layout_constraintTop_toBottomOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/blue_500"
                android:minHeight="57dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAllCaps="true"
                android:text="@string/cancel_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
